[gd_scene load_steps=5 format=3 uid="uid://dth3xnfeitujx"]

[ext_resource type="Script" uid="uid://cxf1hdjrnl57r" path="res://ui/weapon_ui.gd" id="1_3tokw"]
[ext_resource type="Texture2D" uid="uid://dpjbrht186vf8" path="res://assets/pistol.png" id="1_ihfr4"]
[ext_resource type="Texture2D" uid="uid://cvv2wains7b1h" path="res://assets/fist.png" id="2_f68lp"]

[sub_resource type="Theme" id="Theme_f68lp"]

[node name="weapon_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f68lp")
script = ExtResource("1_3tokw")
icon_texture_hand = ExtResource("2_f68lp")
icon_texture_gun = ExtResource("1_ihfr4")
icon_scale_active = 2.2

[node name="RightPanel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -198.0
offset_right = 90.0
offset_bottom = -148.0
grow_vertical = 0
scale = Vector2(2.16, 2.16)

[node name="WeaponIconContainer" type="Control" parent="RightPanel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2

[node name="WeaponIcon" type="TextureRect" parent="RightPanel/WeaponIconContainer"]
layout_mode = 0
offset_left = 25.0
offset_right = 25.0
offset_bottom = 50.0
stretch_mode = 5

[node name="AmmoLabel" type="Label" parent="RightPanel"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -145.0
offset_right = 221.0
offset_bottom = -35.0
grow_vertical = 0
color = Color(0.627451, 0.44313726, 0, 0.5137255)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -145.0
offset_right = 84.0
offset_bottom = -35.0
grow_vertical = 0
color = Color(1, 0.7137255, 0, 1)
